refactor: 简化系统配置并优化路由结构
- 修改API响应成功码从数字0改为字符串'00000000'
- 简化Dashboard路由，只保留工作台页面，移除分析页和概览页
- 清理登录页面，移除账号类型选择器和其他登录方式
- 删除demos和vben演示路由模块
- 更新mock数据，只保留工作台菜单
- 修正默认首页路径为/dashboard
- 清理工作台页面的快捷导航链接"

--- a/apps/web-naive/src/locales/langs/en-US/page.json
+++ b/apps/web-naive/src/locales/langs/en-US/page.json
@@ -11,5 +11,14 @@
     "title": "Dashboard",
     "analytics": "Analytics",
     "workspace": "Workspace"
+  },
+  "sys": {
+    "core": {
+      "dictionary": {
+        "name":"Name",
+        "code":"Code",
+        "type":"Type"
+      }
+    }
   }
 }
