--- a/apps/web-naive/src/locales/langs/zh-CN/page.json
+++ b/apps/web-naive/src/locales/langs/zh-CN/page.json
@@ -11,5 +11,14 @@
     "title": "概览",
     "analytics": "分析页",
     "workspace": "工作台"
+  },
+  "sys": {
+    "core": {
+      "dictionary": {
+        "name":"名称",
+        "code":"代码",
+        "type":"类型"
+      }
+    }
   }
 }
