feat(core): 新增数据字典模块及相关接口和类型定义
- 定义数据字典及字典项的 DTO 和 VO 接口，完善类型系统
- 新增后端分页查询数据字典接口，支持按名称、编码、类型筛选
- Web 端集成数据字典分页查询接口，实现数据表格展示和条件过滤
- 优化本地和接口响应数据的分页结构与返回格式
- 补充中英文多语言字典类型描述，实现枚举和树形类型切换
- 修正登录接口错误响应优化，简化错误返回信息
- 统一请求客户端名称，调整请求路径及接口调用方式

--- a/apps/web-naive/src/locales/langs/en-US/page.json
+++ b/apps/web-naive/src/locales/langs/en-US/page.json
@@ -17,7 +17,13 @@
       "dictionary": {
         "name":"Name",
         "code":"Code",
-        "type":"Type"
+        "type":"Type",
+        "enums": {
+          "type": {
+            "enum": "Enum",
+            "tree": "tree"
+          }
+        }
       }
     }
   }
