feat(@vben/web-naive): 新增组织架构和行政区划模块

--- a/apps/web-naive/src/locales/langs/en-US/route.json
+++ b/apps/web-naive/src/locales/langs/en-US/route.json
@@ -6,6 +6,12 @@
       "dictionary": {
         "title": "Dictionary"
       }
+    },
+    "rbac": {
+      "title": "Organization",
+      "region": {
+        "title": "Region"
+      }
     }
   }
 }
