--- a/apps/web-naive/src/locales/langs/zh-CN/route.json
+++ b/apps/web-naive/src/locales/langs/zh-CN/route.json
@@ -6,6 +6,12 @@
       "dictionary": {
         "title": "数据字典"
       }
+    },
+    "rbac": {
+      "title": "组织架构",
+      "region": {
+        "title": "行政区划"
+      }
     }
   }
 }
